--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PORT=3002
+PORT=3001
 REDIS_PUBSUB_URL=redis://localhost:6381
 REDIS_CACHE_URL=redis://localhost:6380
 SESSION_EXP=3600
-DB_URL=mysql://mindblendr:1234@localhost:3306
+MAIN_DB_URL=mysql://mindblendr:1234@localhost:3306/service_db_user
+LOGS_DB_URL=
