--- a/package.json
+++ b/package.json
@@ -26,7 +26,5 @@
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
   },
-  "devDependencies": {
-    "sequelize-cli": "^6.2.0"
-  }
+  "devDependencies": {}
 }
